# mcmb

components/start_up_eth/: CMakeLists.txt  start_up_eth.c  start_up_eth.h
components/start_up_netif/: CMakeLists.txt  start_up_netif.c  start_up_netif.h
components/start_up_wifi/: CMakeLists.txt  Kconfig.projbuild  start_up_wifi.c  start_up_wifi.h
lwmb/: CMakeLists.txt
lwmb/include/: a.h  h.h  r.h
lwmb/src/: .a.c.kate-swp  .d.c.kate-swp  CMakeLists.txt  a.c  h.c  r.c
rx/: CMakeLists.txt  sdkconfig  sdkconfig.old
rx/main/: main.c
tx/: CMakeLists.txt
txrx/: CMakeLists.txt  sdkconfig
txrx/components/: CMakeLists.txt
txrx/components/include/: .html.h.kate-swp  esp.h  eth.h  evhdlr.h  html.h  httpd.h  mb.h  netif.h  nvs.h  wifi.h  wlan.h
txrx/components/src/: eth.c  evhdlr.c  html.c  httpd.c  mb.c  netif.c  nvs.c  wifi.c  wlan.c
txrx/main/: CMakeLists.txt  main.c
